--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ bilibili-api-python = ">=16.2.0"
 aiofiles = ">=0.8.0"
 nonebot2 = "^2.4.0"
 nonebot-adapter-onebot = "^2.4.6"
+nonebot-plugin-htmlrender = "^0.4.0"
 
 
 [build-system]
